<?php

namespace App;

class Application
{
    public function run(): string
    {
        // récupérer et vérifier infos de la requête
        // routing


        return '';
    }
}
