<?php

namespace App;

use Psr\Container\ContainerInterface;

class Container implements ContainerInterface
{

    public function get(string $id)
    {
        // TODO: Implement get() method.
    }

    public function has(string $id): bool
    {
        // TODO: Implement has() method.
    }
}
