<?php

namespace App\Controller;

class PostController extends Controller
{

}
