<?php

namespace App\Model\Db;

class Query
{

}
